--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,21 @@
-name: Echo Workflow
+name: Deploy to S3
 
 on: push
 
 jobs:
-  echo:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      
-    - name: Read AWS Policy JSON File
-      id: read_file  
-      run: |
-        echo "content=$(<./policy.json)" >> $GITHUB_ENV
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
 
-    - name: Run a one-line script
-      run: |
-        echo "JSON File Content=$content"
+      - name: Deploy static site to S3 bucket
+        run: aws s3 sync ./public/ s3://aws-mahdi-cicd --delete
+
+  
