--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
           aws-region: ap-southeast-1
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./build/. s3://aws-mahdi-cicd --delete
+        run: aws s3 sync ./app s3://aws-mahdi-cicd --delete
 
   
