--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Check if file exists
-        run: test -f app/index.html
+        run: |
+          if [ -f app/index.html ]; then
+            echo "File exists in the app folder."
+          else
+            echo "File does not exist in the app folder."
+        
+        
   deploy:
     runs-on: ubuntu-latest
     steps:
