--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,29 @@ jobs:
             echo "File does not exist in the app folder."
               exit 1
           fi
+  createOrUpdateBucket:
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      S3_BUCKET_NAME: rahmah-test
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Check if bucket exists
+        run: |
+          if aws s3 ls "s3://$S3_BUCKET_NAME" 2>&1 | grep -q 'NoSuchBucket'; then
+            echo "Bucket does not exist. Creating..."
+            aws s3 mb "s3://$BUCKET_NAME"
+          else
+            echo "Bucket already exists."
+          fi
+
+      - name: Set up static hosting
+        run: |
+          aws s3 sync "s3://$S3_BUCKET_NAME" --delete
         
         
   deploy:
