--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,9 @@ jobs:
         uses: aitorres/aws-s3-create-bucket@v1.2.0
         with:
           bucket-name: 'rahmah-test'
-          aws-access-key-id: $({secrets.AWS_ACCESS_KEY_ID})
-          aws-secret-access-key: $({secrets.AWS_SECRET_ACCESS_KEY})
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
           acl: 'private'
       
         
