--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,17 +32,17 @@ jobs:
       - name: Deploy static site to S3 bucket
         run: aws s3 sync ./app s3://aws-mahdi-cicd --delete
         
-  createbucket:
-    runs-on: ubuntu-latest
-    steps:
-      - name: create buckect on s3e
-        uses: aitorres/aws-s3-create-bucket@v1.2.0
-        with:
-          bucket-name: 'rahmah-test'
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-1
-          acl: 'private'
+  # createbucket:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: create buckect on s3e
+  #       uses: aitorres/aws-s3-create-bucket@v1.2.0
+  #       with:
+  #         bucket-name: 'rahmah-test'
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ap-southeast-1
+  #         acl: 'private'
 
   deletebuckect:
     runs-on:  ubuntu-latest
