--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,9 +50,9 @@ jobs:
     - name: configure s3 buckect 
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGIUON: ap-southeast-1
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-southeast-1
     - name: delete the S3 buckect
       run: |
         aws s3 rb s3://rahmah-test --force
