--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       - name: create buckect on s3e
         uses: aitorres/aws-s3-create-bucket@v1.2.0
         with:
-          bucket-name: 'rahmah-test'
+          bucket-name: 'rahmah-test1'
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
@@ -46,6 +46,7 @@ jobs:
 
   deletebuckect:
     runs-on:  ubuntu-latest
+    needs: createbucket
     steps:
     - name: configure s3 buckect 
       uses: aws-actions/configure-aws-credentials@v1
@@ -55,7 +56,7 @@ jobs:
         aws-region: ap-southeast-1
     - name: delete the S3 buckect
       run: |
-        aws s3 rb s3://rahmah-test --force
+        aws s3 rb s3://rahmah-test1 --force
         
       
       
